tests/js/invalid/tag/mismatched-types-1.buri
orange: #orange = #orange(1, 2)